--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "checkJs": false,
     "allowJs": true,
-
     "strict": true,
     "noEmit": false,
     "esModuleInterop": true,
