--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.15",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
