--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
     "next": "14.2.15",
     "next-sitemap": "^4.2.3",
